tests/format/misc/errors/postcss/scss/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`less-syntax.less error test 1`] = `
"CssSyntaxError: Unknown word (1:4)
> 1 | a {.bordered();}
    |    ^
  2 | "
`;
